# midi_player

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  midi_player
include/: header.h
lib/concatf/sources/: my_putstr_stderr.c
src/: debug.c  disp_keys.c  disp_msg.c  display_from_events.c  display_from_notes.c  explore_file.c  globals.c  main.c  sounds.c  transform_events_to_notes.c  unicode.c
